--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="F:\Research file pack\Images\logo.png">
+    <link rel="icon" type="image/x-icon" href="logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re-search Engine | The Knowledge Hub</title>
@@ -188,8 +188,8 @@
 </head>
 <body>
 
-    <div class="header-banner">
-        <img src="F:\Research file pack\Images\logo.png" alt="Re-search Logo" class="site-logo">
+    <div class="header-banner">  
+        <img src="logo.png" alt="Re-search Logo" class="site-logo">
         <h1>RE-SEARCH HUB</h1>
         <p>Your portal to explore the world with topics you wonder about</p>
     </div>
@@ -239,7 +239,7 @@
 
         <div class="creator-section">
             <div class="creator-image">
-                <img src="F:\Research file pack\Images\rebanta.jpg.jpg" alt="Rebanta Ray">
+                <img src="rebanta.jpg.jpg" alt="Rebanta Ray">
             </div>
             <div class="creator-info">
                 <h2>Meet the Creator</h2>
@@ -263,7 +263,7 @@
             var input = document.getElementById("userBox").value.toLowerCase().trim();
 
             if (input.includes("earth")) { window.location.href = "mother earth.html"; } 
-            else if (input.includes("auto") || input.includes("car")) { window.location.href = "automobiles.html"; }
+            else if (input.includes("auto")) { window.location.href = "automobiles.html"; }
             else if (input.includes("audio") || input.includes("vision")) { window.location.href = "audio & vision.html"; }
             else if (input.includes("entertainment")) { window.location.href = "entertainment.html"; }
             else if (input.includes("body") || input.includes("human")) { window.location.href = "human body.html"; }
@@ -275,4 +275,5 @@
     </script>
 
 </body>
+
 </html>
