--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="logo.png">
+    <link rel="icon" type="image/x-icon" href="https://github.com/rebantaray/Re-search-Engine-/blob/main/logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re-search Engine | The Knowledge Hub</title>
@@ -189,7 +189,7 @@
 <body>
 
     <div class="header-banner">  
-        <img src="logo.png" alt="Re-search Logo" class="site-logo">
+        <img src="https://github.com/rebantaray/Re-search-Engine-/blob/main/logo.png" alt="Re-search Logo" class="site-logo">
         <h1>RE-SEARCH HUB</h1>
         <p>Your portal to explore the world with topics you wonder about</p>
     </div>
@@ -277,3 +277,4 @@
 </body>
 
 </html>
+
