--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="https://github.com/rebantaray/Re-search-Engine-/blob/main/logo.png">
+    <link rel="icon" type="image/x-icon" href="logo.png.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re-search Engine | The Knowledge Hub</title>
